Refactoring for better inlining.  Replaced binomial heap with lazy aux pairing heap. Q14 is currently broken (again) and needs investigating.