@@ -47,7 +47,7 @@ public class HParmsDefaults extends Properties
 		retval.setProperty("getpage_fail_sleep_time_ms", "1");
 		retval.setProperty("archive_dir", "/home/hrdbms/");
 		retval.setProperty("hrdbms_user", "hrdbms");
-		retval.setProperty("Xmx_string", "24g");
+		retval.setProperty("Xmx_string", "32g");
 		retval.setProperty("number_of_coords", "1");
 		retval.setProperty("max_batch", "1250000");
 		retval.setProperty("archive", "false");
@@ -57,7 +57,7 @@ public class HParmsDefaults extends Properties
 		retval.setProperty("reorg_refresh_target_days", "7");
 		retval.setProperty("critical_mem_percent", "15");
 		retval.setProperty("stack_size", "2M");
-		retval.setProperty("jvm_args", "-XX:+UseG1GC -XX:G1HeapRegionSize=32m -XX:+ParallelRefProcEnabled -XX:MaxDirectMemorySize=327772160000");
+		retval.setProperty("jvm_args", "-XX:+UseG1GC -XX:G1HeapRegionSize=32m -XX:+ParallelRefProcEnabled -XX:MaxDirectMemorySize=327772160000 -XX:+AggressiveOpts");
 		retval.setProperty("external_factor", "68.0");
 		retval.setProperty("hash_external_factor", "120.0");
 		retval.setProperty("max_queued_load_flush_threads", "5");
@@ -85,7 +85,7 @@ public class HParmsDefaults extends Properties
 		retval.setProperty("sort_bucket_size", "300000");
 		retval.setProperty("pbpe_externalize_interval_s", "60");
 		retval.setProperty("hjo_bin_size", "100000");
-		retval.setProperty("mo_bin_size", "1000000");
+		retval.setProperty("mo_bin_size", "3000000");
 		HParmsDefaults.retval = retval;
 		return retval;
 	}
